--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -21,11 +21,12 @@ body {
   height: 100%;
   background-color: pink;
   float: left;
+  position: relative;
 }
 
 @keyframes logo {
-  0% { width: 100%; height: 100%;}
-  100% { bottom:50%; width: 25%; height: 25%;}
+  0% { top: 0%; width: 100%; height: 100%;}
+  100% { top: 40%; width: 25%; height: 25%;}
 }
 
 .logo > img {
@@ -34,6 +35,8 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+
   animation-name: logo;
   animation-duration: 5s;
   animation-iteration-count: infinite;
