--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -7,6 +7,7 @@ body {
   width: 100%;
   height: 200px;
   background-color: lightblue;
+  overflow: hidden;
 }
 
 .box1 {
@@ -26,17 +27,18 @@ body {
 
 @keyframes logo {
   0% { top: 0%;  left: 0; width: 100%; height: 100%;}
-  100% { top: 40%; left: 40%;  width: 25%; height: 25%;}
+  100% { top: 40%; left: 30%;  width: 25%; height: 25%;}
 }
 
 .logo > img {
   width: 100%;
   height: 100%;
   display: block;
+  box-shadow: 0px 0px 5px green;
+  border-radius: 20%;
   margin-left: auto;
   margin-right: auto;
   position: absolute;
-
   animation-name: logo;
   animation-duration: 5s;
   animation-iteration-count: infinite;
@@ -53,7 +55,7 @@ body {
 .titleu {
 
   animation-name: titleu;
-  animation-duration: 10s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   position: absolute;
   top: 80%;
@@ -62,23 +64,21 @@ body {
 .titled {
   width: auto;
   animation-name: titled;
-  animation-duration: 10s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   background-color: pink;
-  overflow: hidden;
 }
 
 @keyframes titleu{
 
   1% {top: 80%;}
-  50% {top: -50%; }
-  100% {top: -100%;}
+  100% {top: -24%;}
 }
 
 @keyframes titled{
 
   1% {margin-top: 0%;}
-  100% {margin-top: 100%;}
+  100% {margin-top: 27%;}
 }
 /*@keyframes titleu{
 
@@ -292,11 +292,24 @@ text-align: center;
 
 .footerbox > hr {
    background-color: white;
+   border: none;
+   height: 1px;
+   width: 80%;
 }
 
 .footerbox > p {
   float: right;
 }
+
+
+.spacer {
+  width: 80%;
+  height: 3px;
+  background-color: white;
+  margin-top: 30%;
+  margin-bottom: 5%;
+}
+
 
 .socialmediaL {
   width: 100%;
@@ -304,11 +317,11 @@ text-align: center;
 }
 
 .socialmedia1 {
-  width: 40%;
+  width: 38%;
   background-color: orange;
   float: left;
   height: 100px;
-  margin-bottom: 100px;
+
 }
 .socialmedia2 {
   padding: 5px;
@@ -317,7 +330,7 @@ text-align: center;
   background-color: pink;
   float: left;
   text-align: right;
-  margin-bottom: 100px;
+
 }
 
 .socialmedia2 > img {
