--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -2,7 +2,16 @@ body {
   background-color: lightgreen;
 }
 
-
+.ruler {
+  width: 80%;
+  height: 2px;
+  background-color: DarkOliveGreen;
+  margin-bottom: 5%;
+}
+.bigbox > h2 {
+  padding: 0px;
+  margin: 0px;
+}
 .header {
   width: 100%;
   height: 200px;
@@ -40,7 +49,7 @@ body {
   margin-right: auto;
   position: absolute;
   animation-name: logo;
-  animation-duration: 5s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
 
 }
@@ -72,13 +81,13 @@ body {
 @keyframes titleu{
 
   1% {top: 80%;}
-  100% {top: -24%;}
+  100% {top: -50%;}
 }
 
 @keyframes titled{
 
   1% {margin-top: 0%;}
-  100% {margin-top: 27%;}
+  100% {margin-top: 50%;}
 }
 /*@keyframes titleu{
 
@@ -220,6 +229,11 @@ height:100%; */
   margin: 5%;
   position: relative;
   float: left;
+
+  background-size: 100% 100%;
+  background-image:
+linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
+url("../images/intro_img1.jpg");
 }
 
 .imgbox > img {
@@ -231,11 +245,14 @@ height:100%; */
 
 .imgboxmsg {
   position: absolute;
-  height: 120px;
+  height: 80px;
   width: 60%;
   top: 20%;
   border: 2px solid green;
   left: 10%;
+  color: white;
+  padding: 10%;
+
 }
 
 
@@ -244,7 +261,7 @@ height:100%; */
   height: 80%;
   margin: 5%;
   background: rgb(34,193,195);
- background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+ background: linear-gradient(0deg, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73));
  float:left;
  border: 2px solid purple;
 }
@@ -337,3 +354,7 @@ text-align: center;
   width: 35px;
   margin-left: 15px;
 }
+
+
+
+/* modal Window */
