--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -7,8 +7,15 @@ button {
   color: white;
   font-size: 0.6em;
   padding: 8px;
-  margin-top: 15%;
+  margin-top: 10%;
 }
+
+button:hover {
+  background-color: lightgray;
+  color: black;
+}
+
+
 .ruler {
   width: 80%;
   height: 2px;
@@ -307,15 +314,19 @@ width: 25%;
 float: left;
 margin-left: 6.25%;
 text-align: center;
+  font-size: 0.8em;
 }
 
 .product > img {
   margin-top: 2%;
   width: 90%;
   margin-bottom: 4%;
-
 }
 
+.product > h5 {
+  color: olivedrab;
+  font-size: 0.7em;
+}
 .footer {
   background-color: #303030;
   width: 85%;
