--- a/Project2/css/style.css
+++ b/Project2/css/style.css
@@ -185,7 +185,7 @@ height:100%; */
 .twobyone {
   width: 100%;
   height: 300px;
-  background-color: pink;
+  /* background-color: pink; */
   margin-bottom: 8%;
 }
 
